further clarify need for full map directory when moving beyond the demo.

--- a/roadmap/web/maps.html
+++ b/roadmap/web/maps.html
@@ -51,23 +51,32 @@ Thank you for your understanding.
 <HR>
 <p>
 <b>Demo file</b> -- if all you want to do is give RoadMap a trial run, then
-<a href="http://roadmap.digitalomaha.net/maps/demo_maps.tar.gz">this file</a> is all you need.  It includes
-the map directory, state boundaries for the continental US, and the
-map covering the city of San Francisco.  Note that the map directory
-included here is minimal, to reduce download time.  If you download other
-maps as well, you'll need to download the full map directory, below.
+<a href="http://roadmap.digitalomaha.net/maps/demo_maps.tar.gz">this file</a>
+is all you need.  It includes a map directory, state boundaries
+for the continental US, and the map that covers the city of San
+Francisco.  Note that the map directory included here is minimal,
+to reduce download time.  If you download other maps as well,
+you'll need to download the full map directory, below.
 <HR>
 <P>
-The next file is the RoadMap map directory. It is used by RoadMap
-to decide what file(s) of data should be loaded for the specific area you're
-trying to view.
+The next file is the all-inclusive RoadMap map directory (or
+index).  The map directory file is used by RoadMap to decide what
+file(s) of data should be loaded for the specific geographic area(s)
+you're trying to view -- in order to be able to view all of the
+available pre-compiled maps, you need a full directory file,
+not the subset version that's included with the demo maps.
 This file must be present in the map directory or RoadMap will not work. 
 <P>
 <UL>
-  <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/usdir.rdm.tar.gz">
-         map directory for RoadMap version 1.1.0 </A> Includes
-         support for the Digital Charts of the World maps, Canadian
-	 maps, and US State boundaries.</LI>
+  <LI><A class=normal 
+	href="http://roadmap.digitalomaha.net/maps/usdir.rdm.tar.gz">
+	 Full map index directory for RoadMap version 1.1.0 maps</A>
+	 Includes support for all US states and Canadian
+	 provinces, state and provincial boundaries, and the
+	 Digital Charts of the World maps.  If you want to do
+	 anything more than look at the demo, you definitely need
+	 this file.</LI>
+
 </UL>
 <HR>
 <P>All of the following files are gzipped tar files that contain
