--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -21,7 +21,7 @@ own risk!</b>.  Always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
 have a passenger use RoadMap, not the driver.
 <P>
-<b>Note</b>: the maps available on this pages are <i>little endian</i>,
+<b>Note</b>: the maps available on these pages are <i>little endian</i>,
 i.e. they will work fine on a PC, Zaurus or Linux/iPAQ. These maps
 will <i>not</i> work on PowerPC (i.e. MAC) or Sparc computers. Maps for
 these architectures might become available in the future. In the mean time
@@ -56,7 +56,7 @@ is all you need.  It includes a map directory, state boundaries
 for the continental US, and the map that covers the city of San
 Francisco.  Note that the map directory included here is minimal,
 to reduce download time.  If you download other maps as well,
-you'll need to download the full map directory, below.
+then you <b>must</b> download the all-inclusive map directory.
 <HR>
 <P>
 The next file is the all-inclusive RoadMap map directory (or
