--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -21,7 +21,7 @@ own risk!</b>.  Always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
 have a passenger use RoadMap, not the driver.
 <P>
-<b>Note</b>: the maps available on these pages are <i>little endian</i>,
+<b>Note #1</b>: the maps available on these pages are <i>little endian</i>,
 i.e. they will work fine on a PC, Zaurus or Linux/iPAQ. These maps
 will <i>not</i> work on PowerPC (i.e. MAC) or Sparc computers. Maps for
 these architectures might become available in the future. In the mean time
@@ -36,8 +36,20 @@ you can be sure we'll only make changes for good reasons!
 <b>Note #3</b>: these maps require RoadMap version 1.1.0 and later. They
 are not compatible with earlier versions of RoadMap.
 <P>
-If you need maps for 1.0.12, they are available here:
-	<a href="http://roadmap.digitalomaha.net/maps-1.0.12">roadmap.digitalomaha.net/maps-1.0.12</a>.
+<b>Note #4</b>:  these maps are slightly different than those originally
+released with 1.1.0.  RoadMap 1.1.0 was incapable of filling in polygons
+(e.g.  lakes, parks) correctly, and usually drew odd triangular shapes
+instead.  Later versions of RoadMap (from CVS) can fill polygons correctly,
+but require these newer maps to do so.  Version 1.1.0 can still use these
+newer maps, but won't attempt to fill in polygons at all.  If you really want
+the original 1.1.0 maps, you may be able to find them here:
+	<a href="http://roadmap.digitalomaha.net/maps-1.1.0-nopoly">
+	                roadmap.digitalomaha.net/maps-1.1.0-nopoly</a>.
+But you really shouldn't need them.  Use the newer maps, down below.
+<P>
+If you need maps for 1.0.12, they may be available here:
+	<a href="http://roadmap.digitalomaha.net/maps-1.0.12">
+	                roadmap.digitalomaha.net/maps-1.0.12</a>.
 <HR>
 <P>
 The precompiled maps are <b>big</b>, and bandwidth
@@ -90,7 +102,7 @@ an agency of the U.S. Government, and is in the public domain. Therefore, the
 RoadMap maps of the US states and territories are in the public domain.
 <P>
 The maps linked to below are all available directly in here:
-	<a href="http://roadmap.digitalomaha.net/maps-1.1.0">maps-1.1.0</a>.
+	<a href="http://roadmap.digitalomaha.net/maps-1.1.0+">maps-1.1.0+</a>.
 <CENTER>
 <TABLE width="100%">
   <TBODY>
@@ -114,6 +126,7 @@ The maps linked to below are all available directly in here:
         <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/usDE.tar.gz">Delaware</A> 
 
         <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/usDC.tar.gz">District of Columbia</A> 
+
         <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/usFL.tar.gz">Florida</A> 
 
         <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/usGA.tar.gz">Georgia</A> 
