--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -16,7 +16,7 @@ sources contain even more errors.  <b>Use RoadMap at your
 own risk!</b>.  Always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
 have a passenger use RoadMap, not the driver.
-<H2>Latest</H2>
+<H2>Latest release</H2>
 The latest version(s) of RoadMap can be downloaded from
 SourceForge, via the
 <a href="http://sourceforge.net/projects/roadmap">RoadMap project page</a>.
@@ -26,6 +26,13 @@ Older versions of RoadMap are also available at SourceForge, but a
 somewhat more complete set, including some intermediate releases, and
 binary releases, can be 
 <a href="http://roadmap.digitalomaha.net/roadmap">downloaded here</a>.
+<p>
+<H2>Newer</H2>
+The latest development version of RoadMap is in CVS at SourceForge.
+In order to access the "anonymous" version, you should follow the
+instructions at 
+<a href="http://sourceforge.net/cvs/?group_id=74158">this page</a>.
+<p>
 <br>
 <!-- INCLUDE_SITE_SPONSOR_HERE -->
 </BODY></HTML>
