--- a/trunk/roadmap/web/navbar.html
+++ b/trunk/roadmap/web/navbar.html
@@ -6,8 +6,9 @@
      class="navitem" href="index.html">Home</a> <span class="invisible">|</span>
    <a class="navitem2" href="status.html">Status</a> <span class="invisible">|</span>
   <a class="navitem" href="documentation.html">Documentation</a> <span class="invisible">|</span>
-   <a class="navitem2" href="manual.html">Manual</a> <span class="invisible">|</span>
-   <a class="navitem2" href="installation.html">Quickstart</a> <span class="invisible">|</span>
+   <a class="navitem2" href="quickstart.html">Quickstart</a> <span class="invisible">|</span>
+   <a class="navitem2" href="usermanual.html">User Manual</a> <span class="invisible">|</span>
+   <a class="navitem2" href="devguide.html">Developers Guide</a> <span class="invisible">|</span>
    <a class="navitem2" href="buglist.html">Bug list</a> <span class="invisible">|</span>
    <a class="navitem2" href="todolist.html">To-do list</a> <span class="invisible">|</span>
    <a class="navitem2" href="changelog.html">Changelog</a> <span class="invisible">|</span>
