major documentation refactoring.  "chapters", written in txt2tags format, are now under the doc subdirectory, and are presented on the web in some cases as standalone docs, and in other cases combined. and

--- a/roadmap/web/index.html
+++ b/roadmap/web/index.html
@@ -21,8 +21,7 @@ available in the <a class="normal" href="documentation.html">documentation</a>
 distributed with RoadMap.
 
 <P>RoadMap is an open source (GPL) program that provides a car navigation for
-Linux, UNIX and now Windows CE (a.k.a. PocketPC).
-??? Something about iPhone ?
+Linux, UNIX and now Windows CE (a.k.a. PocketPC) and the iPhone/iPod.
 
 <P> RoadMap displays a map of the streets, tracks the position provided by a
 NMEA-compliant GPS receiver, identifies the street matching this GPS position
@@ -53,7 +52,6 @@ site.
 
 <P>The Windows CE (Windows Mobile, Pocket PC, ..) port is a native one
 and has been tested on several devices.
-??? Something about iPhone ?
 
 <P>The on-screen user interface is very customizable.  All command actions
 can be bound to arbitrary menu entries, toolbar buttons, or
