--- a/trunk/roadmap/web/documentation.html
+++ b/trunk/roadmap/web/documentation.html
@@ -6,11 +6,10 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
 <CENTER>
-<H1>RoadMap: Documentation</H1>
+<H1>RoadMap Documentation</H1>
 </CENTER>
-<BR>
 
-<P>The following documentation is available:
+The following documentation is available:
 <UL>
    <LI>The <a class="normal" href="manual.html">RoadMap Manual</a>.
    <LI><a class="normal" href="installation.html">Installation notes</a>:
