--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -6,8 +6,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
 <CENTER>
-<H1>RoadMap: Download</H1><BR></CENTER>
-<P>
+<H1>RoadMap Downloads</H1>
+</CENTER>
 <H2>Disclaimer</H2>
 RoadMap is known to have bugs.  The data
 provided by the US Census Bureau and other entities is known to
