--- a/trunk/roadmap/web/index.html
+++ b/trunk/roadmap/web/index.html
@@ -5,12 +5,9 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
-<CENTER>
-<H1>A Car Navigation System for Linux and UNIX (and PocketPC too)</H1>
-</CENTER>
-<BR>
+<H1>RoadMap &mdash; A Car Navigation System for Linux, UNIX and Others</H1>
 
-<p>In addition to this introductory page, you might want to look at
+In addition to this introductory page, you might want to look at
 a short note describing <a class="normal" href="status.html">
 current project status</a>.
 
