--- a/trunk/roadmap/web/navbar.html
+++ b/trunk/roadmap/web/navbar.html
@@ -1,6 +1,6 @@
 <!-- start of navigation bar -->
 <div class="navigation-bar">
-  <a class="navbar-image" href="index.html"><span class="navbar-image"></span></a>
+  <a href="index.html"><span class="navbar-image"></span></a>
   <a id="first-navitem"
 
      class="navitem" href="index.html">Home</a> <span class="invisible">|</span>
@@ -13,10 +13,10 @@
    <a class="navitem2" href="buglist.html">Bug list</a> <span class="invisible">|</span>
    <a class="navitem2" href="todolist.html">To-do list</a> <span class="invisible">|</span>
    <a class="navitem2" href="changelog.html">Changelog</a> <span class="invisible">|</span>
-  <a class="navitem" href="download.html">Download</a> <span class="invisible">|</span>
+  <a class="navitem" href="download.html">Downloads</a> <span class="invisible">|</span>
   <a class="navitem" href="screenshots.html">Screenshots</a> <span class="invisible">|</span>
   <a class="navitem" href="maps.html">Maps</a> <span class="invisible">|</span>
-  <a class="navitem" href="list.html">Mailing list</a>
+  <a class="navitem" href="list.html">Mailing lists</a>
    <a class="navitem2" href="http://sourceforge.net/mailarchive/forum.php?forum_name=roadmap-general">Archives</a> <span class="invisible">|</span>
   <a class="navitem" href="http://sourceforge.net/projects/roadmap">SourceForge</a> <span class="invisible">|</span>
    <a class="navitem2" href="http://roadmap.wiki.sourceforge.net">Wiki</a> <span class="invisible">|</span>
