--- a/roadmap/web/list.html
+++ b/roadmap/web/list.html
@@ -6,8 +6,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
 <CENTER>
-<H1>RoadMap: Mailing List</H1><BR></CENTER>
-<P>
+<H1>RoadMap Mailing Lists</H1>
+</CENTER>
 For many years, the RoadMap mailing list was hosted at saignon.net.  We
 thank the folks there for this service.
 <P>
