--- a/roadmap/web/maps.html
+++ b/roadmap/web/maps.html
@@ -6,8 +6,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
 <CENTER>
-<H1>RoadMap: Pre-compiled Maps</H1><BR></CENTER>
-<P>
+<H1>RoadMap Pre-compiled Maps</H1>
+</CENTER>
 <center>
 <b>USA maps built from the TIGER 2006 Second Edition files!</b>
 </center>
