--- a/roadmap/web/screenshots.html
+++ b/roadmap/web/screenshots.html
@@ -6,7 +6,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <BODY class=roadmap>
 <!--#include virtual="navbar.html" --><hr>
 <CENTER>
-<H1>RoadMap: Screenshots</H1><BR></CENTER>
+<H1>RoadMap Screenshots</H1>
+</CENTER>
 Most screenshots below were made with the GTK2 version of RoadMap.
 <HR>
 <BR>
