--- a/trunk/roadmap/web/documentation.html
+++ b/trunk/roadmap/web/documentation.html
@@ -11,7 +11,7 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 
 The following documentation is available:
 <UL>
-   <LI>The <a class="normal" href="manual.html">RoadMap Manual</a>.
+   <LI>The <a class="normal" href="usermanual.html">RoadMap Manual</a>.
    <LI><a class="normal" href="installation.html">Installation notes</a>:
    	Quickstart, and instructions for Familiar Linux.
    <LI>The (incomplete) RoadMap
